@startuml
abstract class Target {
- Size size
- Visibility visibility
+ void printStatus()
+ void changeSize()
+ void changeVisibility()
}
enum Visibility {
+  VISIBLE
+  INVISIBLE
- String title
+ String toString()
}
class Goblin {
+ String toString()
}
class Wizard {
- Deque<Runnable> undoStack
- Deque<Runnable> redoStack
+ void castSpell(Runnable)
+ void undoLastSpell()
+ void redoLastSpell()
+ String toString()
}
enum Size {
+  SMALL
+  NORMAL
- String title
+ String toString()
}


Target -->  "-size" Size
Wizard -->  "-changeSize" Goblin
Wizard -->  "-changeVisibility" Goblin
Target -->  "-visibility" Visibility
Goblin --|> Target
App --> "castSpell" Wizard
@enduml